[tool.poetry]
name = "hydraping"
version = "0.1.0"
description = "Multi-protocol connection tester with live terminal UI - DNS, ICMP, TCP, and HTTP checks"
authors = ["Filip Procházka"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/fprochazka/hydraping"
repository = "https://github.com/fprochazka/hydraping"
keywords = ["ping", "network", "monitoring", "icmp", "dns", "tcp", "udp", "http", "terminal-ui", "latency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
]
packages = [{include = "hydraping"}]

[tool.poetry.scripts]
hydraping = "hydraping.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
icmplib = "^3.0.4"
dnspython = "^2.8.0"
aiohttp = "^3.13.2"
rich = "^14.2.0"
typer = "^0.20.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"
pytest = "^8.3"
pytest-asyncio = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
