[project]
name = "hydraping"
version = "0.1.0"
description = "Multi-protocol connection tester with live terminal UI - DNS, ICMP, TCP, and HTTP checks"
authors = [{ name = "Filip Procházka" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "ping",
    "network",
    "monitoring",
    "icmp",
    "dns",
    "tcp",
    "udp",
    "http",
    "terminal-ui",
    "latency",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "icmplib>=3.0.4,<4",
    "dnspython>=2.8.0,<3",
    "aiohttp>=3.13.2,<4",
    "rich>=14.2.0,<15",
    "typer>=0.20.0,<0.21",
]

[project.urls]
Homepage = "https://github.com/fprochazka/hydraping"
Repository = "https://github.com/fprochazka/hydraping"

[project.scripts]
hydraping = "hydraping.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.14.10,<0.15",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
]

[tool.uv]

[tool.uv.build-backend]
module-name = ["hydraping"]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
